using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationConstants : MonoBehaviour
{
    // ANIMATIONNAMES
    public const string SLIME_ATTACK = "Attack01";


    // PARAMETER
    public const string DIE = "die";
    public const string IS_RUNNING = "isRunning";
    public const string GET_HIT = "getHit";
    public const string ATTACK = "attack";
}
